--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "activeTab"
   ],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "index.html",
     "default_icon": {
       "16": "icon.png",
       "48": "icon.png",
